[project]
name = "blanket-lm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "markdown>=3.8",
    "openai>=1.78.0",
    "pymupdf4llm>=0.0.24",
]

[project.scripts]
markdown-extract= "blanket-lm:markdown"

[project.optional-dependencies]
dev = ["pyright"]

[tool.pyright]
